--- a/foh-switch-blueprint.yaml
+++ b/foh-switch-blueprint.yaml
@@ -89,214 +89,177 @@ action:
               - conditions:
                   '{{ trigger.payload_json.action == "press_1" and wait.trigger.payload == "release_1" }}'
                 sequence:
-                  - service: script.set_state
-                    data:
-                      state: on
-                      lights: "{{ left_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: '{ "state": "on" }'
+                    for_each: "{{expand('left_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_2" and wait.trigger.payload == "release_2" }}'
                 sequence:
-                  - service: script.set_state
-                    data:
-                      state: off
-                      lights: "{{ left_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: '{ "state": "off" }'
+                    for_each: "{{expand('left_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_3" and wait.trigger.payload == "release_3" }}'
                 sequence:
-                  - service: script.set_state
-                    data:
-                      state: on
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: '{ "state": "on" }'
+                    for_each: "{{expand('right_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_4" and wait.trigger.payload == "release_4" }}'
                 sequence:
-                  - service: script.set_state
-                    data:
-                      state: off
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: '{ "state": "off" }'
+                    for_each: "{{expand('right_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_1_and_3" and wait.trigger.payload == "release_1_and_3" }}'
                 sequence:
-                  - service: script.set_state
-                    data:
-                      state: on
-                      lights: "{{ left_lights }}"
-                  - service: script.set_state
-                    data:
-                      state: on
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: '{ "state": "on" }'
+                    for_each: "{{ expand('left_lights') | list + expand('right_lights') }}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_2_and_4" and wait.trigger.payload == "release_2_and_4" }}'
                 sequence:
-                  - service: script.set_state
-                    data:
-                      state: off
-                      lights: "{{ left_lights }}"
-                  - service: script.set_state
-                    data:
-                      state: off
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: '{ "state": "off" }'
+                    for_each: "{{ expand('left_lights') | list + expand('right_lights') }}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_1" and wait.trigger == None }}'
                 sequence:
-                  - service: script.start_raise
-                    data:
-                      lights: "{{ left_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": 40 }"
+                    for_each: "{{expand('left_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_2" and wait.trigger == None }}'
                 sequence:
-                  - service: script.start_dim
-                    data:
-                      lights: "{{ left_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": -40 }"
+                    for_each: "{{expand('left_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_3" and wait.trigger == None }}'
                 sequence:
-                  - service: script.start_raise
-                    data:
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": 40 }"
+                    for_each: "{{expand('right_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_4" and wait.trigger == None }}'
                 sequence:
-                  - service: script.start_dim
-                    data:
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": -40 }"
+                    for_each: "{{expand('right_lights')}}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_1_and_3" and wait.trigger == None }}'
                 sequence:
-                  - service: script.start_raise
-                    data:
-                      lights: "{{ left_lights }}"
-                  - service: script.start_raise
-                    data:
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": 40 }"
+                    for_each: "{{ expand('left_lights') | list + expand('right_lights') }}"
               - conditions:
                   '{{ trigger.payload_json.action == "press_2_and_4" and wait.trigger == None }}'
                 sequence:
-                  - service: script.start_dim
-                    data:
-                      lights: "{{ left_lights }}"
-                  - service: script.start_dim
-                    data:
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": -40 }"
+                    for_each: "{{ expand('left_lights') | list + expand('right_lights') }}"
       - conditions: '{{ "release_" | string in trigger.payload_json.action }}'
         sequence:
           - choose:
               - conditions: '{{ trigger.payload_json.action == "release_1" }}'
                 sequence:
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ left_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": \"stop\" }"
+                    for_each: "{{expand('left_lights')}}"
               - conditions: '{{ trigger.payload_json.action == "release_2" }}'
                 sequence:
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ left_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": \"stop\" }"
+                    for_each: "{{expand('left_lights')}}"
               - conditions: '{{ trigger.payload_json.action == "release_3" }}'
                 sequence:
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": \"stop\" }"
+                    for_each: "{{expand('right_lights')}}"
               - conditions: '{{ trigger.payload_json.action == "release_4" }}'
                 sequence:
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": \"stop\" }"
+                    for_each: "{{expand('right_lights')}}"
               - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
                 sequence:
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ left_lights }}"
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ right_lights }}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": \"stop\" }"
+                    for_each: "{{ expand('left_lights') | list + expand('right_lights') }}"
               - conditions: '{{ trigger.payload_json.action == "release_2_and_4" }}'
                 sequence:
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ left_lights }}"
-                  - service: script.stop_move
-                    data:
-                      lights: "{{ right_lights }}"
-
-set_state:
-  lights:
-    name: Lights to target
-    description: The name(s) of the light(s) as defined in z2m
-    required: true
-    selector:
-      text:
-        multiple: true
-  state:
-    name: Target state
-    description: Desired state
-    required: true
-    default: ""
-  sequence:
-    - service: script.set_lights
-      data:
-        payload: '{{ "{ \"state\": " ~ "\"" ~ state ~ "\" }" }}'
-        lights: "{{ lights }}"
-start_dim:
-  lights:
-    name: Lights to target
-    description: The name(s) of the light(s) as defined in z2m
-    required: true
-    selector:
-      text:
-        multiple: true
-  sequence:
-    - service: script.set_lights
-      data:
-        payload: "{ \"brightness_move\": -40 }"
-        lights: "{{ lights }}"
-start_raise:
-  lights:
-    name: Lights to target
-    description: The name(s) of the light(s) as defined in z2m
-    required: true
-    selector:
-      text:
-        multiple: true
-  sequence:
-    - service: script.set_lights
-      data:
-        payload: "{ \"brightness_move\": 40 }"
-        lights: "{{ lights }}"
-stop_move:
-  lights:
-    name: Lights to target
-    description: The name(s) of the light(s) as defined in z2m
-    required: true
-    selector:
-      text:
-        multiple: true
-  sequence:
-    - service: script.set_lights
-      data:
-        payload: "{ \"brightness_move\": \"stop\" }"
-        lights: "{{ lights }}"
-set_lights:
-  description: Send requested payload to set of lights
-  fields:
-    lights:
-      name: Lights to target
-      description: The name(s) of the light(s) as defined in z2m
-      required: true
-      selector:
-        text:
-          multiple: true
-    payload:
-      name: Payload for the lights
-      description: (z2m mqtt) payload for the lights
-      default: ""
-  sequence:
-    - repeat:
-      sequence:
-        - action: mqtt.publish
-          data:
-            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-            payload: "{{ payload }}"
-            evaluate_payload: false
-            qos: 0
-            retain: false
-      for_each: "{{expand('lights')}}"
+                  - repeat:
+                    sequence:
+                      - action: mqtt.publish
+                        data:
+                          topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                          payload: "{ \"brightness_move\": \"stop\" }"
+                    for_each: "{{ expand('left_lights') | list + expand('right_lights') }}"
