--- a/foh-switch-blueprint.yaml
+++ b/foh-switch-blueprint.yaml
@@ -46,120 +46,97 @@ trigger_variables:
   controller: !input "controller"
 trigger:
   - platform: mqtt
-    topic: "{{ base_topic ~ '/' ~ controller }}"
+    topic: '{{ base_topic ~ ''/'' ~ controller }}'
 condition:
   - condition: template
-    value_template: >
+    value_template: |
       {{
-        ((trigger.payload_json.elapsed is defined and
-        trigger.payload_json.elapsed > hold_delay) or
-        trigger.payload_json.elapsed is not defined) and
-        trigger.payload_json.action != Null
+        ('release_' in trigger.payload_json.action and trigger.payload_json.elapsed is defined)
+        or 'press_' in trigger.payload_json.action
       }}
 action:
   - variables:
       controller: !input "controller"
   - choose:
+      - conditions: >-
+          {{ "release_" in trigger.payload_json.action and
+          trigger.payload_json.elapsed | int < hold_delay }}
+        sequence:
+          - choose:
+              - conditions: '{{ trigger.payload_json.action == "release_1" }}'
+                sequence:
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "on" }'
+                      for_each: !input "left_lights"
+              - conditions: '{{ trigger.payload_json.action == "release_2" }}'
+                sequence:
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "off" }'
+                      for_each: !input "left_lights"
+              - conditions: '{{ trigger.payload_json.action == "release_3" }}'
+                sequence:
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "on" }'
+                      for_each: !input "right_lights"
+              - conditions: '{{ trigger.payload_json.action == "release_4" }}'
+                sequence:
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "off" }'
+                      for_each: !input "right_lights"
+              - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
+                sequence:
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "on" }'
+                      for_each: !input "left_lights"
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "on" }'
+                      for_each: !input "right_lights"
+              - conditions: '{{ trigger.payload_json.action == "release_2_and_4" }}'
+                sequence:
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "off" }'
+                      for_each: !input "left_lights"
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "off" }'
+                      for_each: !input "right_lights"
       - conditions: '{{ "press_" | string in trigger.payload_json.action }}'
         sequence:
-          - wait_for_trigger:
-              - platform: mqtt
-                topic: "{{ base_topic ~ '/' ~ controller ~ '/action' }}"
-                payload: release_1
-              - platform: mqtt
-                topic: "{{ base_topic ~ '/' ~ controller ~ '/action' }}"
-                payload: release_2
-              - platform: mqtt
-                topic: "{{ base_topic ~ '/' ~ controller ~ '/action' }}"
-                payload: release_3
-              - platform: mqtt
-                topic: "{{ base_topic ~ '/' ~ controller ~ '/action' }}"
-                payload: release_4
-              - platform: mqtt
-                topic: "{{ base_topic ~ '/' ~ controller ~ '/action' }}"
-                payload: release_1_and_3
-              - platform: mqtt
-                topic: "{{ base_topic ~ '/' ~ controller ~ '/action' }}"
-                payload: release_2_and_4
-            timeout:
-              milliseconds: !input "hold_delay"
+          - delay:
+              milliseconds: 250
           - choose:
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_1" and wait.trigger.payload == "release_1" }}'
-                sequence:
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input "left_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_2" and wait.trigger.payload == "release_2" }}'
-                sequence:
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "off" }'
-                      for_each: !input "left_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_3" and wait.trigger.payload == "release_3" }}'
-                sequence:
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input "right_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_4" and wait.trigger.payload == "release_4" }}'
-                sequence:
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "off" }'
-                      for_each: !input "right_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_1_and_3" and wait.trigger.payload == "release_1_and_3" }}'
-                sequence:
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input "left_lights"
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input "right_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_2_and_4" and wait.trigger.payload == "release_2_and_4" }}'
-                sequence:
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "off" }'
-                      for_each: !input "left_lights"
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "off" }'
-                      for_each: !input "right_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_1" and wait.trigger == None }}'
+              - conditions: '{{ trigger.payload_json.action == "press_1" }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -168,8 +145,7 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
                       for_each: !input "left_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_2" and wait.trigger == None }}'
+              - conditions: '{{ trigger.payload_json.action == "press_2" }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -178,8 +154,7 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
                       for_each: !input "left_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_3" and wait.trigger == None }}'
+              - conditions: '{{ trigger.payload_json.action == "press_3" }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -188,8 +163,7 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
                       for_each: !input "right_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_4" and wait.trigger == None }}'
+              - conditions: '{{ trigger.payload_json.action == "press_4" }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -198,8 +172,7 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
                       for_each: !input "right_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_1_and_3" and wait.trigger == None }}'
+              - conditions: '{{ trigger.payload_json.action == "press_1_and_3" }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -215,8 +188,7 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
                       for_each: !input "right_lights"
-              - conditions:
-                  '{{ trigger.payload_json.action == "press_2_and_4" and wait.trigger == None }}'
+              - conditions: '{{ trigger.payload_json.action == "press_2_and_4" }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -232,7 +204,9 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
                       for_each: !input "right_lights"
-      - conditions: '{{ "release_" | string in trigger.payload_json.action }}'
+      - conditions: >-
+          {{ "release_" in trigger.payload_json.action and
+          trigger.payload_json.elapsed | int > hold_delay }}
         sequence:
           - choose:
               - conditions: '{{ trigger.payload_json.action == "release_1" }}'
