--- a/foh-switch-fancier-blueprint.yaml
+++ b/foh-switch-fancier-blueprint.yaml
@@ -30,8 +30,9 @@ blueprint:
     left_payload_helper:
       name: Left payload helper
       description: The helper containing the cycling payloads when the left button is pressed multiple times.
-      entity:
-        domain: input_select
+      device:
+        entity:
+          domain: input_select
     cycle_delay:
       name: Cycle delay
       description:
