--- a/foh-switch-fancier-blueprint.yaml
+++ b/foh-switch-fancier-blueprint.yaml
@@ -30,17 +30,19 @@ blueprint:
     left_payload:
       name: Left payload helper
       description: The helper containing the cycling payloads when the top left button is pressed multiple times.
-      default:
+      default: {}
       selector:
-        entity:
-          domain: input_select
+        target:
+          entity:
+            domain: input_select
     right_payload:
       name: Right payload helper
       description: The helper containing the cycling payloads when the top right button is pressed multiple times.
-      default:
+      default: {}
       selector:
-        entity:
-          domain: input_select
+        target:
+          entity:
+            domain: input_select
     cycle_delay:
       name: Cycle delay
       description:
@@ -100,11 +102,10 @@ action:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{{ left_payload.state }}'
+                            payload: '{{ left_payload[0].state }}'
                       for_each: !input "left_lights"
                   - action: input_select.select_next
-                    target: 
-                      entity_id: !input "left_payload"
+                    target: !input "left_payload"
                     data:
                       cycle: true
               - conditions: '{{ trigger.payload_json.action == "release_2" }}'
